# ECScpp

./: .gitignore  CMakeLists.txt  README.md
Tests/: GoogleTest.cpp
cmake-modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
examples/: ComponentStoreArrayExample.cpp  ComponentStoreArrayExemple.h  ComponentStoreExample.cpp  ComponentStoreExample.h  ExampleBase.cpp  ExampleBase.h
include/: ComponentManager.h  DebugNameComponentManager.h  Entity.h  EntityManager.h  EntityManagerOld.h  Game.h  IGame.h  InstanceData.h  Scene.h  Timer.h  Vector3.h
include/components/: BoxCollider2D.h  CircleCollider2D.h  Collider2D.h  Components.h  Direction.h  Object2D.h  Rigidbody2D.h  Size.h  Sprite.h  Transform.h  Vector2D.h
include/display/: Screen.h
include/systems/: Collision.h  Physics2D.h  Renderer.h  SpriteRenderer.h  SystemBase.h  Updater.h
include/texturing/: TextureManager.h
include/utils/: ComponentStore.h  ComponentStoreArray.h  KeyPressSurfaces.h  NonAssignable.h  ShapeBuilder.h  ShapeType.h
lib/googletest-master/googlemock/docs/: CheatSheet.md  CookBook.md  FrequentlyAskedQuestions.md
lib/googletest-master/googlemock/docs/v1_5/: CheatSheet.md  CookBook.md  FrequentlyAskedQuestions.md
lib/googletest-master/googlemock/docs/v1_6/: CheatSheet.md  CookBook.md  FrequentlyAskedQuestions.md
lib/googletest-master/googlemock/docs/v1_7/: CheatSheet.md  CookBook.md  FrequentlyAskedQuestions.md
lib/googletest-master/googlemock/include/gmock/: gmock-matchers.h
lib/googletest-master/googlemock/scripts/: gmock-config.in
lib/googletest-master/googlemock/scripts/generator/: LICENSE
lib/googletest-master/googletest/: README.md
lib/googletest-master/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_5_Primer.md  V1_5_PumpManual.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md  V1_7_PumpManual.md
lib/googletest-master/googletest/include/gtest/: gtest-death-test.h  gtest.h
lib/googletest-master/googletest/include/gtest/internal/: gtest-type-util.h.pump
lib/googletest-master/googletest/scripts/: gtest-config.in
lib/googletest-master/googletest/src/: gtest-filepath.cc  gtest.cc
src/: EntityManagerOld.cpp  Game.cpp  Scene.cpp  Timer.cpp  main.cpp
src/display/: Screen.cpp
src/systems/: Collision.cpp  Physics2D.cpp  Renderer.cpp  SpriteRenderer.cpp  SystemBase.cpp  Updater.cpp
src/texturing/: TextureManager.cpp
